--- a/sp-config/item-service-dev.yml
+++ b/sp-config/item-service-dev.yml
@@ -1,13 +1,18 @@
 spring:
   application: 
     name: item-service 
+  rabbitmq:
+    host: 192.168.126.131
+    port: 5672
+    username: admin
+    password: admin
 
 eureka: 
   client: 
     service-url: 
       defaultZone: http://eureka1:2001/eureka, http://eureka2:2002/eureka
       
-      
+    
 ---
 spring:
   profiles: item1
